--- a/coverage-report/jp/co/dk/datastoremanager/database/IntSqlParameter.html
+++ b/coverage-report/jp/co/dk/datastoremanager/database/IntSqlParameter.html
@@ -33,19 +33,19 @@ import jp.co.dk.datastoremanager.exception.DataStoreManagerException;
     <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
     <tr>
       <td class='line'>12</td><td>&nbsp;</td>
-      <td><pre class='prettyprint'>	protected int <span class='instance covered' title='Reads: 1 Writes: 1'>parameter</span>;</pre></td>
+      <td><pre class='prettyprint'>	protected int <span class='instance covered' title='Reads: 890 Writes: 33'>parameter</span>;</pre></td>
     </tr>
     <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
     <tr>
-      <td class='line'>14</td><td class='count'>1</td>
+      <td class='line'>14</td><td class='count'>33</td>
       <td><pre class='prettyprint covered' id='l14s0'>	IntSqlParameter(int parameter) {</pre></td>
     </tr>
     <tr>
-      <td class='line'>15</td><td class='count'>1</td>
+      <td class='line'>15</td><td class='count'>33</td>
       <td><pre class='prettyprint covered' id='l15s0'>		this.parameter = parameter;</pre></td>
     </tr>
     <tr>
-      <td class='line'>16</td><td class='count'>1</td>
+      <td class='line'>16</td><td class='count'>33</td>
       <td><pre class='prettyprint covered' id='l16s0'>	}</pre></td>
     </tr>
     <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
@@ -62,7 +62,7 @@ import jp.co.dk.datastoremanager.exception.DataStoreManagerException;
       <td><pre class='prettyprint'>		try {</pre></td>
     </tr>
     <tr>
-      <td class='line'>21</td><td class='count'>1</td>
+      <td class='line'>21</td><td class='count'>13</td>
       <td><pre class='prettyprint covered' id='l21s0'>			statement.setInt(index, this.parameter);</pre></td>
     </tr>
     <tr>
@@ -78,7 +78,7 @@ import jp.co.dk.datastoremanager.exception.DataStoreManagerException;
       <td><pre class='prettyprint'>		}</pre></td>
     </tr>
     <tr>
-      <td class='line'>25</td><td class='count'>1</td>
+      <td class='line'>25</td><td class='count'>13</td>
       <td><pre class='prettyprint covered' id='l25s0'>	}</pre></td>
     </tr>
     <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
@@ -91,34 +91,34 @@ import jp.co.dk.datastoremanager.exception.DataStoreManagerException;
       <td><pre class='prettyprint'>	public boolean equals(Object object) {</pre></td>
     </tr>
     <tr>
-      <td></td><td class='count'>0</td>
+      <td></td><td class='count'>213</td>
       <td class='paths'>
-        <span style='cursor:default; background-color:#ff0000' onclick='hidePath()'>Path coverage: 0/4</span>
-        <span class='uncovered' onclick="showPath(this,'l29s0 l29s1')">A: 0</span>
+        <span style='cursor:default; background-color:#40bf00' onclick='hidePath()'>Path coverage: 3/4</span>
+        <span class='covered' onclick="showPath(this,'l29s0 l29s1')">A: 3</span>
         <span class='uncovered' onclick="showPath(this,'l29s0 l30s0 l30s1')">B: 0</span>
-        <span class='uncovered' onclick="showPath(this,'l29s0 l30s0 l31s0 l32s0 l32s1')">C: 0</span>
-        <span class='uncovered' onclick="showPath(this,'l29s0 l30s0 l31s0 l32s0 l33s0')">D: 0</span>
+        <span class='covered' onclick="showPath(this,'l29s0 l30s0 l31s0 l32s0 l32s1')">C: 108</span>
+        <span class='covered' onclick="showPath(this,'l29s0 l30s0 l31s0 l32s0 l33s0')">D: 102</span>
       </td>
     </tr>
     <tr>
-      <td class='line'>29</td><td class='count'>0</td>
-      <td><pre class='prettyprint jmp'>		<span id='l29s0' title='Executions: 0' class='uncovered'>if (object == null)</span> <span id='l29s1' title='Executions: 0' class='uncovered'>return false;</span></pre></td>
+      <td class='line'>29</td><td class='count'>213</td>
+      <td><pre class='prettyprint jmp'>		<span id='l29s0' title='Executions: 213' class='covered'>if (object == null)</span> <span id='l29s1' title='Executions: 3' class='covered'>return false;</span></pre></td>
     </tr>
     <tr>
-      <td class='line'>30</td><td class='count'>0</td>
-      <td><pre class='prettyprint jmp'>		<span id='l30s0' title='Executions: 0' class='uncovered'>if (!(object instanceof IntSqlParameter)) return false;</span></pre></td>
+      <td class='line'>30</td><td class='count'>210</td>
+      <td><pre class='prettyprint jmp'>		<span id='l30s0' title='Executions: 210' class='covered'>if (!(object instanceof IntSqlParameter)) return false;</span></pre></td>
     </tr>
     <tr>
-      <td class='line'>31</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l31s0'>		IntSqlParameter thisClassObj = (IntSqlParameter) object;</pre></td>
+      <td class='line'>31</td><td class='count'>210</td>
+      <td><pre class='prettyprint covered' id='l31s0'>		IntSqlParameter thisClassObj = (IntSqlParameter) object;</pre></td>
     </tr>
     <tr>
-      <td class='line'>32</td><td class='count'>0</td>
-      <td><pre class='prettyprint jmp'>		<span id='l32s0' title='Executions: 0' class='uncovered'>if (thisClassObj.hashCode() == this.hashCode()) return true;</span></pre></td>
+      <td class='line'>32</td><td class='count'>210</td>
+      <td><pre class='prettyprint jmp'>		<span id='l32s0' title='Executions: 210' class='covered'>if (thisClassObj.hashCode() == this.hashCode()) return true;</span></pre></td>
     </tr>
     <tr>
-      <td class='line'>33</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l33s0'>		return false;</pre></td>
+      <td class='line'>33</td><td class='count'>102</td>
+      <td><pre class='prettyprint covered' id='l33s0'>		return false;</pre></td>
     </tr>
     <tr>
       <td class='line'>34</td><td>&nbsp;</td>
@@ -134,8 +134,8 @@ import jp.co.dk.datastoremanager.exception.DataStoreManagerException;
       <td><pre class='prettyprint'>	public int hashCode() {</pre></td>
     </tr>
     <tr>
-      <td class='line'>38</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l38s0'>		return this.parameter * 17;</pre></td>
+      <td class='line'>38</td><td class='count'>856</td>
+      <td><pre class='prettyprint covered' id='l38s0'>		return this.parameter * 17;</pre></td>
     </tr>
     <tr>
       <td class='line'>39</td><td>&nbsp;</td>
@@ -151,16 +151,16 @@ import jp.co.dk.datastoremanager.exception.DataStoreManagerException;
       <td><pre class='prettyprint'>	public String toString() {</pre></td>
     </tr>
     <tr>
-      <td class='line'>43</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l43s0'>		StringBuilder sb = new StringBuilder();</pre></td>
+      <td class='line'>43</td><td class='count'>21</td>
+      <td><pre class='prettyprint covered' id='l43s0'>		StringBuilder sb = new StringBuilder();</pre></td>
     </tr>
     <tr>
-      <td class='line'>44</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l44s0'>		sb.append(this.parameter).append("(int)");</pre></td>
+      <td class='line'>44</td><td class='count'>21</td>
+      <td><pre class='prettyprint covered' id='l44s0'>		sb.append(this.parameter).append("(int)");</pre></td>
     </tr>
     <tr>
-      <td class='line'>45</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l45s0'>		return sb.toString();</pre></td>
+      <td class='line'>45</td><td class='count'>21</td>
+      <td><pre class='prettyprint covered' id='l45s0'>		return sb.toString();</pre></td>
     </tr>
     <tr>
       <td class='line'>46</td><td>&nbsp;</td>
