--- a/coverage-report/jp/co/dk/datastoremanager/database/AbstractDataBaseAccessObject.html
+++ b/coverage-report/jp/co/dk/datastoremanager/database/AbstractDataBaseAccessObject.html
@@ -55,7 +55,7 @@ import static jp.co.dk.datastoremanager.message.DataStoreManagerMessage.*;
     </tr>
     <tr>
       <td class='line'>28</td><td>&nbsp;</td>
-      <td><pre class='prettyprint'>	protected DataBaseDataStore <span class='instance covered' title='Reads: 5 Writes: 1'>dataStore</span>;</pre></td>
+      <td><pre class='prettyprint'>	protected DataBaseDataStore <span class='instance covered' title='Reads: 5 Writes: 2'>dataStore</span>;</pre></td>
     </tr>
     <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
     <tr>
@@ -144,30 +144,30 @@ import static jp.co.dk.datastoremanager.message.DataStoreManagerMessage.*;
 	 * @param dataStore データストアオブジェクト
 	 * @throws DataStoreManagerException データストアがデータベース用データストアでなかった場合
 	 */    <tr>
-      <td></td><td class='count'>0</td>
+      <td></td><td class='count'>1</td>
       <td class='paths'>
-        <span style='cursor:default; background-color:#ff0000' onclick='hidePath()'>Path coverage: 0/2</span>
+        <span style='cursor:default; background-color:#7f8000' onclick='hidePath()'>Path coverage: 1/2</span>
         <span class='uncovered' onclick="showPath(this,'l76s0 l77s0 l77s1')">A: 0</span>
-        <span class='uncovered' onclick="showPath(this,'l76s0 l77s0 l78s0 l79s0')">B: 0</span>
+        <span class='covered' onclick="showPath(this,'l76s0 l77s0 l78s0 l79s0')">B: 1</span>
       </td>
     </tr>
 </div><span>	/*...*/</span></td>
     </tr>
     <tr>
-      <td class='line'>76</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l76s0'>	protected AbstractDataBaseAccessObject(DataStore dataStore) throws DataStoreManagerException {</pre></td>
+      <td class='line'>76</td><td class='count'>1</td>
+      <td><pre class='prettyprint covered' id='l76s0'>	protected AbstractDataBaseAccessObject(DataStore dataStore) throws DataStoreManagerException {</pre></td>
     </tr>
     <tr>
-      <td class='line'>77</td><td class='count'>0</td>
-      <td><pre class='prettyprint jmp'>		<span id='l77s0' title='Executions: 0' class='uncovered'>if (!(dataStore instanceof DataBaseDataStore)) throw new DataStoreManagerException(FAILE_TO_CAST_DATA_STORE_OBJECT);</span> </pre></td>
+      <td class='line'>77</td><td class='count'>1</td>
+      <td><pre class='prettyprint jmp'>		<span id='l77s0' title='Executions: 1' class='covered'>if (!(dataStore instanceof DataBaseDataStore)) throw new DataStoreManagerException(FAILE_TO_CAST_DATA_STORE_OBJECT);</span> </pre></td>
     </tr>
     <tr>
-      <td class='line'>78</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l78s0'>		this.dataStore = (DataBaseDataStore)dataStore;</pre></td>
+      <td class='line'>78</td><td class='count'>1</td>
+      <td><pre class='prettyprint covered' id='l78s0'>		this.dataStore = (DataBaseDataStore)dataStore;</pre></td>
     </tr>
     <tr>
-      <td class='line'>79</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l79s0'>	}</pre></td>
+      <td class='line'>79</td><td class='count'>1</td>
+      <td><pre class='prettyprint covered' id='l79s0'>	}</pre></td>
     </tr>
     <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
     <tr>
