--- a/coverage-report/jp/co/dk/datastoremanager/database/DataBaseAccessParameter.html
+++ b/coverage-report/jp/co/dk/datastoremanager/database/DataBaseAccessParameter.html
@@ -46,7 +46,7 @@ import static jp.co.dk.datastoremanager.message.DataStoreManagerMessage.*;
     </tr>
     <tr>
       <td class='line'>19</td><td>&nbsp;</td>
-      <td><pre class='prettyprint'>	protected DataBaseDriverConstants <span class='instance covered' title='Reads: 1 Writes: 1'>driver</span>;</pre></td>
+      <td><pre class='prettyprint'>	protected DataBaseDriverConstants <span class='instance covered' title='Reads: 1366 Writes: 58'>driver</span>;</pre></td>
     </tr>
     <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
     <tr>
@@ -55,7 +55,7 @@ import static jp.co.dk.datastoremanager.message.DataStoreManagerMessage.*;
     </tr>
     <tr>
       <td class='line'>22</td><td>&nbsp;</td>
-      <td><pre class='prettyprint'>	protected String <span class='instance covered' title='Reads: 1 Writes: 1'>url</span>;</pre></td>
+      <td><pre class='prettyprint'>	protected String <span class='instance covered' title='Reads: 1348 Writes: 58'>url</span>;</pre></td>
     </tr>
     <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
     <tr>
@@ -64,7 +64,7 @@ import static jp.co.dk.datastoremanager.message.DataStoreManagerMessage.*;
     </tr>
     <tr>
       <td class='line'>25</td><td>&nbsp;</td>
-      <td><pre class='prettyprint'>	protected String <span class='instance covered' title='Reads: 1 Writes: 1'>sid</span>;</pre></td>
+      <td><pre class='prettyprint'>	protected String <span class='instance covered' title='Reads: 1348 Writes: 58'>sid</span>;</pre></td>
     </tr>
     <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
     <tr>
@@ -73,7 +73,7 @@ import static jp.co.dk.datastoremanager.message.DataStoreManagerMessage.*;
     </tr>
     <tr>
       <td class='line'>28</td><td>&nbsp;</td>
-      <td><pre class='prettyprint'>	protected String <span class='instance covered' title='Reads: 1 Writes: 1'>user</span>;</pre></td>
+      <td><pre class='prettyprint'>	protected String <span class='instance covered' title='Reads: 1348 Writes: 58'>user</span>;</pre></td>
     </tr>
     <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
     <tr>
@@ -82,7 +82,7 @@ import static jp.co.dk.datastoremanager.message.DataStoreManagerMessage.*;
     </tr>
     <tr>
       <td class='line'>31</td><td>&nbsp;</td>
-      <td><pre class='prettyprint'>	protected String <span class='instance covered' title='Reads: 1 Writes: 1'>password</span>;</pre></td>
+      <td><pre class='prettyprint'>	protected String <span class='instance covered' title='Reads: 1348 Writes: 58'>password</span>;</pre></td>
     </tr>
     <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
     <tr>
@@ -105,67 +105,67 @@ import static jp.co.dk.datastoremanager.message.DataStoreManagerMessage.*;
       <td><pre class='prettyprint'>	public DataBaseAccessParameter(DataStoreKind dataStoreKind, DataBaseDriverConstants driver, String url, String sid, String user, String password) throws DataStoreManagerException {</pre></td>
     </tr>
     <tr>
-      <td></td><td class='count'>1</td>
+      <td></td><td class='count'>75</td>
       <td class='paths'>
-        <span style='cursor:default; background-color:#e51a00' onclick='hidePath()'>Path coverage: 1/10</span>
-        <span class='uncovered' onclick="showPath(this,'l46s0 l47s0 l47s1')">A: 0</span>
-        <span class='uncovered' onclick="showPath(this,'l46s0 l47s0 l48s0 l48s2')">B: 0</span>
-        <span class='uncovered' onclick="showPath(this,'l46s0 l47s0 l48s0 l48s1 l48s2')">C: 0</span>
-        <span class='uncovered' onclick="showPath(this,'l46s0 l47s0 l48s0 l48s1 l49s0 l49s2')">D: 0</span>
-        <span class='uncovered' onclick="showPath(this,'l46s0 l47s0 l48s0 l48s1 l49s0 l49s1 l49s2')">E: 0</span>
-        <span class='uncovered' onclick="showPath(this,'l46s0 l47s0 l48s0 l48s1 l49s0 l49s1 l50s0 l50s2')">F: 0</span>
-        <span class='uncovered' onclick="showPath(this,'l46s0 l47s0 l48s0 l48s1 l49s0 l49s1 l50s0 l50s1 l50s2')">G: 0</span>
-        <span class='uncovered' onclick="showPath(this,'l46s0 l47s0 l48s0 l48s1 l49s0 l49s1 l50s0 l50s1 l51s0 l51s2')">H: 0</span>
-        <span class='uncovered' onclick="showPath(this,'l46s0 l47s0 l48s0 l48s1 l49s0 l49s1 l50s0 l50s1 l51s0 l51s1 l51s2')">I: 0</span>
-        <span class='covered' onclick="showPath(this,'l46s0 l47s0 l48s0 l48s1 l49s0 l49s1 l50s0 l50s1 l51s0 l51s1 l52s0 l57s0')">J: 1</span>
+        <span style='cursor:default; background-color:#00ff00' onclick='hidePath()'>Path coverage: 10/10</span>
+        <span class='covered' onclick="showPath(this,'l46s0 l47s0 l47s1')">A: 1</span>
+        <span class='covered' onclick="showPath(this,'l46s0 l47s0 l48s0 l48s2')">B: 1</span>
+        <span class='covered' onclick="showPath(this,'l46s0 l47s0 l48s0 l48s1 l48s2')">C: 3</span>
+        <span class='covered' onclick="showPath(this,'l46s0 l47s0 l48s0 l48s1 l49s0 l49s2')">D: 1</span>
+        <span class='covered' onclick="showPath(this,'l46s0 l47s0 l48s0 l48s1 l49s0 l49s1 l49s2')">E: 3</span>
+        <span class='covered' onclick="showPath(this,'l46s0 l47s0 l48s0 l48s1 l49s0 l49s1 l50s0 l50s2')">F: 1</span>
+        <span class='covered' onclick="showPath(this,'l46s0 l47s0 l48s0 l48s1 l49s0 l49s1 l50s0 l50s1 l50s2')">G: 3</span>
+        <span class='covered' onclick="showPath(this,'l46s0 l47s0 l48s0 l48s1 l49s0 l49s1 l50s0 l50s1 l51s0 l51s2')">H: 1</span>
+        <span class='covered' onclick="showPath(this,'l46s0 l47s0 l48s0 l48s1 l49s0 l49s1 l50s0 l50s1 l51s0 l51s1 l51s2')">I: 3</span>
+        <span class='covered' onclick="showPath(this,'l46s0 l47s0 l48s0 l48s1 l49s0 l49s1 l50s0 l50s1 l51s0 l51s1 l52s0 l57s0')">J: 58</span>
       </td>
     </tr>
     <tr>
-      <td class='line'>46</td><td class='count'>1</td>
+      <td class='line'>46</td><td class='count'>76</td>
       <td><pre class='prettyprint covered' id='l46s0'>		super(dataStoreKind);</pre></td>
     </tr>
     <tr>
-      <td class='line'>47</td><td class='count'>1</td>
-      <td><pre class='prettyprint jmp'>		<span id='l47s0' title='Executions: 1' class='covered'>if (driver   == null)</span> <span id='l47s1' title='Executions: 0' class='uncovered'>throw new DataStoreManagerException(DRIVER_IS_NOT_SET);</span></pre></td>
+      <td class='line'>47</td><td class='count'>75</td>
+      <td><pre class='prettyprint jmp'>		<span id='l47s0' title='Executions: 75' class='covered'>if (driver   == null)</span> <span id='l47s1' title='Executions: 1' class='covered'>throw new DataStoreManagerException(DRIVER_IS_NOT_SET);</span></pre></td>
     </tr>
     <tr>
-      <td class='line'>48</td><td class='count'>1</td>
-      <td><pre class='prettyprint jmp'>		<span id='l48s0' title='Executions: 1' class='covered'>if (url      == null</span> || <span id='l48s1' title='Executions: 1' class='covered'>url.equals("")) throw new DataStoreManagerException(URL_IS_NOT_SET);</span></pre></td>
+      <td class='line'>48</td><td class='count'>74</td>
+      <td><pre class='prettyprint jmp'>		<span id='l48s0' title='Executions: 74' class='covered'>if (url      == null</span> || <span id='l48s1' title='Executions: 73' class='covered'>url.equals("")) throw new DataStoreManagerException(URL_IS_NOT_SET);</span></pre></td>
     </tr>
     <tr>
-      <td class='line'>49</td><td class='count'>1</td>
-      <td><pre class='prettyprint jmp'>		<span id='l49s0' title='Executions: 1' class='covered'>if (sid      == null</span> || <span id='l49s1' title='Executions: 1' class='covered'>sid.equals("")) throw new DataStoreManagerException(SID_IS_NOT_SET);</span></pre></td>
+      <td class='line'>49</td><td class='count'>70</td>
+      <td><pre class='prettyprint jmp'>		<span id='l49s0' title='Executions: 70' class='covered'>if (sid      == null</span> || <span id='l49s1' title='Executions: 69' class='covered'>sid.equals("")) throw new DataStoreManagerException(SID_IS_NOT_SET);</span></pre></td>
     </tr>
     <tr>
-      <td class='line'>50</td><td class='count'>1</td>
-      <td><pre class='prettyprint jmp'>		<span id='l50s0' title='Executions: 1' class='covered'>if (user     == null</span> || <span id='l50s1' title='Executions: 1' class='covered'>user.equals("")) throw new DataStoreManagerException(USER_IS_NOT_SET);</span></pre></td>
+      <td class='line'>50</td><td class='count'>66</td>
+      <td><pre class='prettyprint jmp'>		<span id='l50s0' title='Executions: 66' class='covered'>if (user     == null</span> || <span id='l50s1' title='Executions: 65' class='covered'>user.equals("")) throw new DataStoreManagerException(USER_IS_NOT_SET);</span></pre></td>
     </tr>
     <tr>
-      <td class='line'>51</td><td class='count'>1</td>
-      <td><pre class='prettyprint jmp'>		<span id='l51s0' title='Executions: 1' class='covered'>if (password == null</span> || <span id='l51s1' title='Executions: 1' class='covered'>password.equals("")) throw new DataStoreManagerException(PASSWORD_IS_NOT_SET);</span></pre></td>
+      <td class='line'>51</td><td class='count'>62</td>
+      <td><pre class='prettyprint jmp'>		<span id='l51s0' title='Executions: 62' class='covered'>if (password == null</span> || <span id='l51s1' title='Executions: 61' class='covered'>password.equals("")) throw new DataStoreManagerException(PASSWORD_IS_NOT_SET);</span></pre></td>
     </tr>
     <tr>
-      <td class='line'>52</td><td class='count'>1</td>
+      <td class='line'>52</td><td class='count'>58</td>
       <td><pre class='prettyprint covered' id='l52s0'>		this.driver   = driver;</pre></td>
     </tr>
     <tr>
-      <td class='line'>53</td><td class='count'>1</td>
+      <td class='line'>53</td><td class='count'>58</td>
       <td><pre class='prettyprint covered' id='l53s0'>		this.url      = url;</pre></td>
     </tr>
     <tr>
-      <td class='line'>54</td><td class='count'>1</td>
+      <td class='line'>54</td><td class='count'>58</td>
       <td><pre class='prettyprint covered' id='l54s0'>		this.sid      = sid;</pre></td>
     </tr>
     <tr>
-      <td class='line'>55</td><td class='count'>1</td>
+      <td class='line'>55</td><td class='count'>58</td>
       <td><pre class='prettyprint covered' id='l55s0'>		this.user     = user;</pre></td>
     </tr>
     <tr>
-      <td class='line'>56</td><td class='count'>1</td>
+      <td class='line'>56</td><td class='count'>58</td>
       <td><pre class='prettyprint covered' id='l56s0'>		this.password = password;</pre></td>
     </tr>
     <tr>
-      <td class='line'>57</td><td class='count'>1</td>
+      <td class='line'>57</td><td class='count'>58</td>
       <td><pre class='prettyprint covered' id='l57s0'>	}</pre></td>
     </tr>
     <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
@@ -181,7 +181,7 @@ import static jp.co.dk.datastoremanager.message.DataStoreManagerMessage.*;
       <td><pre class='prettyprint'>	public DataBaseDriverConstants getDriver() {</pre></td>
     </tr>
     <tr>
-      <td class='line'>64</td><td class='count'>1</td>
+      <td class='line'>64</td><td class='count'>32</td>
       <td><pre class='prettyprint covered' id='l64s0'>		return driver;</pre></td>
     </tr>
     <tr>
@@ -202,7 +202,7 @@ import static jp.co.dk.datastoremanager.message.DataStoreManagerMessage.*;
       <td><pre class='prettyprint'>	public String getUrl() {</pre></td>
     </tr>
     <tr>
-      <td class='line'>73</td><td class='count'>1</td>
+      <td class='line'>73</td><td class='count'>39</td>
       <td><pre class='prettyprint covered' id='l73s0'>		return url;</pre></td>
     </tr>
     <tr>
@@ -223,7 +223,7 @@ import static jp.co.dk.datastoremanager.message.DataStoreManagerMessage.*;
       <td><pre class='prettyprint'>	public String getSid() {</pre></td>
     </tr>
     <tr>
-      <td class='line'>82</td><td class='count'>1</td>
+      <td class='line'>82</td><td class='count'>39</td>
       <td><pre class='prettyprint covered' id='l82s0'>		return sid;</pre></td>
     </tr>
     <tr>
@@ -244,7 +244,7 @@ import static jp.co.dk.datastoremanager.message.DataStoreManagerMessage.*;
       <td><pre class='prettyprint'>	public String getUser() {</pre></td>
     </tr>
     <tr>
-      <td class='line'>91</td><td class='count'>1</td>
+      <td class='line'>91</td><td class='count'>39</td>
       <td><pre class='prettyprint covered' id='l91s0'>		return user;</pre></td>
     </tr>
     <tr>
@@ -265,7 +265,7 @@ import static jp.co.dk.datastoremanager.message.DataStoreManagerMessage.*;
       <td><pre class='prettyprint'>	public String getPassword() {</pre></td>
     </tr>
     <tr>
-      <td class='line'>100</td><td class='count'>1</td>
+      <td class='line'>100</td><td class='count'>39</td>
       <td><pre class='prettyprint covered' id='l100s0'>		return password;</pre></td>
     </tr>
     <tr>
@@ -282,8 +282,8 @@ import static jp.co.dk.datastoremanager.message.DataStoreManagerMessage.*;
       <td><pre class='prettyprint'>	protected DataStore createDataStore() {</pre></td>
     </tr>
     <tr>
-      <td class='line'>105</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l105s0'>		return new DataBaseDataStore(this);</pre></td>
+      <td class='line'>105</td><td class='count'>10</td>
+      <td><pre class='prettyprint covered' id='l105s0'>		return new DataBaseDataStore(this);</pre></td>
     </tr>
     <tr>
       <td class='line'>106</td><td>&nbsp;</td>
@@ -299,36 +299,36 @@ import static jp.co.dk.datastoremanager.message.DataStoreManagerMessage.*;
       <td><pre class='prettyprint'>	public int hashCode() {</pre></td>
     </tr>
     <tr>
-      <td class='line'>110</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l110s0'>		int hashcode = super.hashCode() ;</pre></td>
+      <td class='line'>110</td><td class='count'>1284</td>
+      <td><pre class='prettyprint covered' id='l110s0'>		int hashcode = super.hashCode() ;</pre></td>
     </tr>
     <tr>
-      <td class='line'>111</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l111s0'>		hashcode *= this.driver.hashCode() ;</pre></td>
+      <td class='line'>111</td><td class='count'>1284</td>
+      <td><pre class='prettyprint covered' id='l111s0'>		hashcode *= this.driver.hashCode() ;</pre></td>
     </tr>
     <tr>
-      <td class='line'>112</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l112s0'>		hashcode *= this.url.hashCode() ;</pre></td>
+      <td class='line'>112</td><td class='count'>1284</td>
+      <td><pre class='prettyprint covered' id='l112s0'>		hashcode *= this.url.hashCode() ;</pre></td>
     </tr>
     <tr>
-      <td class='line'>113</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l113s0'>		hashcode *= this.sid.hashCode() ;</pre></td>
+      <td class='line'>113</td><td class='count'>1284</td>
+      <td><pre class='prettyprint covered' id='l113s0'>		hashcode *= this.sid.hashCode() ;</pre></td>
     </tr>
     <tr>
-      <td class='line'>114</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l114s0'>		hashcode *= this.user.hashCode() ;</pre></td>
+      <td class='line'>114</td><td class='count'>1284</td>
+      <td><pre class='prettyprint covered' id='l114s0'>		hashcode *= this.user.hashCode() ;</pre></td>
     </tr>
     <tr>
-      <td class='line'>115</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l115s0'>		hashcode *= this.password.hashCode() ;</pre></td>
+      <td class='line'>115</td><td class='count'>1284</td>
+      <td><pre class='prettyprint covered' id='l115s0'>		hashcode *= this.password.hashCode() ;</pre></td>
     </tr>
     <tr>
-      <td class='line'>116</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l116s0'>		hashcode *= 17;</pre></td>
+      <td class='line'>116</td><td class='count'>1284</td>
+      <td><pre class='prettyprint covered' id='l116s0'>		hashcode *= 17;</pre></td>
     </tr>
     <tr>
-      <td class='line'>117</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l117s0'>		return hashcode; </pre></td>
+      <td class='line'>117</td><td class='count'>1284</td>
+      <td><pre class='prettyprint covered' id='l117s0'>		return hashcode; </pre></td>
     </tr>
     <tr>
       <td class='line'>118</td><td>&nbsp;</td>
@@ -344,28 +344,28 @@ import static jp.co.dk.datastoremanager.message.DataStoreManagerMessage.*;
       <td><pre class='prettyprint'>	public String toString() {</pre></td>
     </tr>
     <tr>
-      <td class='line'>122</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l122s0'>		StringBuilder sb = new StringBuilder("DATASTOREKIND=[").append(this.dataStoreKind.toString()).append(']').append(',');</pre></td>
+      <td class='line'>122</td><td class='count'>25</td>
+      <td><pre class='prettyprint covered' id='l122s0'>		StringBuilder sb = new StringBuilder("DATASTOREKIND=[").append(this.dataStoreKind.toString()).append(']').append(',');</pre></td>
     </tr>
     <tr>
-      <td class='line'>123</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l123s0'>		sb.append("DRIVER=[").append(this.driver.getDriverClass()).append(']').append(',');</pre></td>
+      <td class='line'>123</td><td class='count'>25</td>
+      <td><pre class='prettyprint covered' id='l123s0'>		sb.append("DRIVER=[").append(this.driver.getDriverClass()).append(']').append(',');</pre></td>
     </tr>
     <tr>
-      <td class='line'>124</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l124s0'>		sb.append("URL=[").append(this.driver.getUrl(this.url, this.sid)).append(']').append(',');</pre></td>
+      <td class='line'>124</td><td class='count'>25</td>
+      <td><pre class='prettyprint covered' id='l124s0'>		sb.append("URL=[").append(this.driver.getUrl(this.url, this.sid)).append(']').append(',');</pre></td>
     </tr>
     <tr>
-      <td class='line'>125</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l125s0'>		sb.append("USER=[").append(this.user).append(']').append(',');</pre></td>
+      <td class='line'>125</td><td class='count'>25</td>
+      <td><pre class='prettyprint covered' id='l125s0'>		sb.append("USER=[").append(this.user).append(']').append(',');</pre></td>
     </tr>
     <tr>
-      <td class='line'>126</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l126s0'>		sb.append("PASSWORD=[").append(this.password).append(']');</pre></td>
+      <td class='line'>126</td><td class='count'>25</td>
+      <td><pre class='prettyprint covered' id='l126s0'>		sb.append("PASSWORD=[").append(this.password).append(']');</pre></td>
     </tr>
     <tr>
-      <td class='line'>127</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l127s0'>		return sb.toString();</pre></td>
+      <td class='line'>127</td><td class='count'>25</td>
+      <td><pre class='prettyprint covered' id='l127s0'>		return sb.toString();</pre></td>
     </tr>
     <tr>
       <td class='line'>128</td><td>&nbsp;</td>
