--- a/coverage-report/jp/co/dk/datastoremanager/database/Sql.html
+++ b/coverage-report/jp/co/dk/datastoremanager/database/Sql.html
@@ -48,8 +48,8 @@ import static jp.co.dk.datastoremanager.message.DataStoreManagerMessage.*;
       <td><pre class='comment'>	/** SQL本文 */</pre></td>
     </tr>
     <tr>
-      <td class='line'>22</td><td class='count'>4</td>
-      <td><pre class='prettyprint covered' id='l22s0'>	private StringBuilder <span class='instance covered' title='Reads: 8 Writes: 4'>sql</span> = new StringBuilder();</pre></td>
+      <td class='line'>22</td><td class='count'>75</td>
+      <td><pre class='prettyprint covered' id='l22s0'>	private StringBuilder <span class='instance covered' title='Reads: 581 Writes: 75'>sql</span> = new StringBuilder();</pre></td>
     </tr>
     <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
     <tr>
@@ -57,8 +57,8 @@ import static jp.co.dk.datastoremanager.message.DataStoreManagerMessage.*;
       <td><pre class='comment'>	/** パラメータ */</pre></td>
     </tr>
     <tr>
-      <td class='line'>25</td><td class='count'>4</td>
-      <td><pre class='prettyprint covered' id='l25s0'>	private List&lt;SqlParameter> <span class='instance uncovered' title='Reads: 11 Writes: 4'>sqlParameter</span> = new ArrayList&lt;SqlParameter>();</pre></td>
+      <td class='line'>25</td><td class='count'>75</td>
+      <td><pre class='prettyprint covered' id='l25s0'>	private List&lt;SqlParameter> <span class='instance covered' title='Reads: 635 Writes: 75'>sqlParameter</span> = new ArrayList&lt;SqlParameter>();</pre></td>
     </tr>
     <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
     <tr>
@@ -71,30 +71,30 @@ import static jp.co.dk.datastoremanager.message.DataStoreManagerMessage.*;
 	 * @param sql SQL本文の文字列
 	 * @throws DataStoreManagerException SQLオブジェクトのインスタンス生成に失敗した場合
 	 */    <tr>
-      <td></td><td class='count'>4</td>
+      <td></td><td class='count'>75</td>
       <td class='paths'>
-        <span style='cursor:default; background-color:#aa5500' onclick='hidePath()'>Path coverage: 1/3</span>
-        <span class='uncovered' onclick="showPath(this,'l35s0 l36s0 l36s2')">A: 0</span>
-        <span class='uncovered' onclick="showPath(this,'l35s0 l36s0 l36s1 l36s2')">B: 0</span>
-        <span class='covered' onclick="showPath(this,'l35s0 l36s0 l36s1 l37s0 l38s0')">C: 4</span>
+        <span style='cursor:default; background-color:#00ff00' onclick='hidePath()'>Path coverage: 3/3</span>
+        <span class='covered' onclick="showPath(this,'l35s0 l36s0 l36s2')">A: 1</span>
+        <span class='covered' onclick="showPath(this,'l35s0 l36s0 l36s1 l36s2')">B: 1</span>
+        <span class='covered' onclick="showPath(this,'l35s0 l36s0 l36s1 l37s0 l38s0')">C: 73</span>
       </td>
     </tr>
 </div><span>	/*...*/</span></td>
     </tr>
     <tr>
-      <td class='line'>35</td><td class='count'>4</td>
+      <td class='line'>35</td><td class='count'>75</td>
       <td><pre class='prettyprint covered' id='l35s0'>	public Sql(String sql) throws DataStoreManagerException {</pre></td>
     </tr>
     <tr>
-      <td class='line'>36</td><td class='count'>4</td>
-      <td><pre class='prettyprint jmp'>		<span id='l36s0' title='Executions: 4' class='covered'>if (sql == null</span> || <span id='l36s1' title='Executions: 4' class='covered'>sql.equals("")) throw new DataStoreManagerException(FAILE_TO_CREATE_SQL_OBJECT);</span> </pre></td>
+      <td class='line'>36</td><td class='count'>75</td>
+      <td><pre class='prettyprint jmp'>		<span id='l36s0' title='Executions: 75' class='covered'>if (sql == null</span> || <span id='l36s1' title='Executions: 74' class='covered'>sql.equals("")) throw new DataStoreManagerException(FAILE_TO_CREATE_SQL_OBJECT);</span> </pre></td>
     </tr>
     <tr>
-      <td class='line'>37</td><td class='count'>4</td>
+      <td class='line'>37</td><td class='count'>73</td>
       <td><pre class='prettyprint covered' id='l37s0'>		this.sql.append(sql);</pre></td>
     </tr>
     <tr>
-      <td class='line'>38</td><td class='count'>4</td>
+      <td class='line'>38</td><td class='count'>73</td>
       <td><pre class='prettyprint covered' id='l38s0'>	}</pre></td>
     </tr>
     <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
@@ -112,11 +112,11 @@ import static jp.co.dk.datastoremanager.message.DataStoreManagerMessage.*;
       <td><pre class='prettyprint'>	public void setParameter(String parameter) throws DataStoreManagerException {</pre></td>
     </tr>
     <tr>
-      <td class='line'>47</td><td class='count'>2</td>
+      <td class='line'>47</td><td class='count'>57</td>
       <td><pre class='prettyprint covered' id='l47s0'>		this.sqlParameter.add(new StringSqlParameter(parameter));</pre></td>
     </tr>
     <tr>
-      <td class='line'>48</td><td class='count'>2</td>
+      <td class='line'>48</td><td class='count'>55</td>
       <td><pre class='prettyprint covered' id='l48s0'>	}</pre></td>
     </tr>
     <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
@@ -133,11 +133,11 @@ import static jp.co.dk.datastoremanager.message.DataStoreManagerMessage.*;
       <td><pre class='prettyprint'>	public void setParameter(int parameter) {</pre></td>
     </tr>
     <tr>
-      <td class='line'>56</td><td class='count'>1</td>
+      <td class='line'>56</td><td class='count'>26</td>
       <td><pre class='prettyprint covered' id='l56s0'>		this.sqlParameter.add(new IntSqlParameter(parameter));</pre></td>
     </tr>
     <tr>
-      <td class='line'>57</td><td class='count'>1</td>
+      <td class='line'>57</td><td class='count'>26</td>
       <td><pre class='prettyprint covered' id='l57s0'>	}</pre></td>
     </tr>
     <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
@@ -176,11 +176,11 @@ import static jp.co.dk.datastoremanager.message.DataStoreManagerMessage.*;
       <td><pre class='prettyprint'>	public void setParameter(Date parameter) throws DataStoreManagerException {</pre></td>
     </tr>
     <tr>
-      <td class='line'>75</td><td class='count'>1</td>
+      <td class='line'>75</td><td class='count'>25</td>
       <td><pre class='prettyprint covered' id='l75s0'>		this.sqlParameter.add(new DateSqlParameter(parameter));</pre></td>
     </tr>
     <tr>
-      <td class='line'>76</td><td class='count'>1</td>
+      <td class='line'>76</td><td class='count'>24</td>
       <td><pre class='prettyprint covered' id='l76s0'>	}</pre></td>
     </tr>
     <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
@@ -281,7 +281,7 @@ import static jp.co.dk.datastoremanager.message.DataStoreManagerMessage.*;
       <td><pre class='prettyprint'>	public String getSql() {</pre></td>
     </tr>
     <tr>
-      <td class='line'>123</td><td class='count'>4</td>
+      <td class='line'>123</td><td class='count'>49</td>
       <td><pre class='prettyprint covered' id='l123s0'>		return this.sql.toString();</pre></td>
     </tr>
     <tr>
@@ -301,7 +301,7 @@ import static jp.co.dk.datastoremanager.message.DataStoreManagerMessage.*;
       <td><pre class='prettyprint'>	List&lt;SqlParameter> getParameterList() {</pre></td>
     </tr>
     <tr>
-      <td class='line'>131</td><td class='count'>2</td>
+      <td class='line'>131</td><td class='count'>43</td>
       <td><pre class='prettyprint covered' id='l131s0'>		return new ArrayList&lt;SqlParameter>(this.sqlParameter);</pre></td>
     </tr>
     <tr>
@@ -318,16 +318,16 @@ import static jp.co.dk.datastoremanager.message.DataStoreManagerMessage.*;
       <td><pre class='prettyprint'>	public int hashCode() { </pre></td>
     </tr>
     <tr>
-      <td class='line'>136</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l136s0'>		int hashcode = this.sql.toString().hashCode();</pre></td>
+      <td class='line'>136</td><td class='count'>430</td>
+      <td><pre class='prettyprint covered' id='l136s0'>		int hashcode = this.sql.toString().hashCode();</pre></td>
     </tr>
     <tr>
-      <td class='line'>137</td><td class='count'>0</td>
-      <td><pre class='prettyprint jmp'>		<span id='l137s0' title='Executions: 0' class='uncovered'>for (SqlParameter param</span> : <span id='l137s1' title='Executions: 0' class='uncovered'>this.sqlParameter)</span> </pre></td>
+      <td class='line'>137</td><td class='count'>430</td>
+      <td><pre class='prettyprint jmp'>		<span id='l137s0' title='Executions: 430' class='covered'>for (SqlParameter param</span> : <span id='l137s1' title='Executions: 1720' class='covered'>this.sqlParameter)</span> </pre></td>
     </tr>
     <tr>
-      <td class='line'>138</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l138s0'>		return hashcode *17;</pre></td>
+      <td class='line'>138</td><td class='count'>430</td>
+      <td><pre class='prettyprint covered' id='l138s0'>		return hashcode *17;</pre></td>
     </tr>
     <tr>
       <td class='line'>139</td><td>&nbsp;</td>
@@ -343,34 +343,34 @@ import static jp.co.dk.datastoremanager.message.DataStoreManagerMessage.*;
       <td><pre class='prettyprint'>	public boolean equals(Object object) {</pre></td>
     </tr>
     <tr>
-      <td></td><td class='count'>0</td>
+      <td></td><td class='count'>215</td>
       <td class='paths'>
-        <span style='cursor:default; background-color:#ff0000' onclick='hidePath()'>Path coverage: 0/4</span>
-        <span class='uncovered' onclick="showPath(this,'l143s0 l143s1')">A: 0</span>
+        <span style='cursor:default; background-color:#40bf00' onclick='hidePath()'>Path coverage: 3/4</span>
+        <span class='covered' onclick="showPath(this,'l143s0 l143s1')">A: 3</span>
         <span class='uncovered' onclick="showPath(this,'l143s0 l144s0 l144s1')">B: 0</span>
-        <span class='uncovered' onclick="showPath(this,'l143s0 l144s0 l145s0 l146s0 l146s1')">C: 0</span>
-        <span class='uncovered' onclick="showPath(this,'l143s0 l144s0 l145s0 l146s0 l147s0')">D: 0</span>
+        <span class='covered' onclick="showPath(this,'l143s0 l144s0 l145s0 l146s0 l146s1')">C: 108</span>
+        <span class='covered' onclick="showPath(this,'l143s0 l144s0 l145s0 l146s0 l147s0')">D: 104</span>
       </td>
     </tr>
     <tr>
-      <td class='line'>143</td><td class='count'>0</td>
-      <td><pre class='prettyprint jmp'>		<span id='l143s0' title='Executions: 0' class='uncovered'>if (object == null)</span> <span id='l143s1' title='Executions: 0' class='uncovered'>return false;</span></pre></td>
+      <td class='line'>143</td><td class='count'>215</td>
+      <td><pre class='prettyprint jmp'>		<span id='l143s0' title='Executions: 215' class='covered'>if (object == null)</span> <span id='l143s1' title='Executions: 3' class='covered'>return false;</span></pre></td>
     </tr>
     <tr>
-      <td class='line'>144</td><td class='count'>0</td>
-      <td><pre class='prettyprint jmp'>		<span id='l144s0' title='Executions: 0' class='uncovered'>if (!(object instanceof Sql)) return false;</span></pre></td>
+      <td class='line'>144</td><td class='count'>212</td>
+      <td><pre class='prettyprint jmp'>		<span id='l144s0' title='Executions: 212' class='covered'>if (!(object instanceof Sql)) return false;</span></pre></td>
     </tr>
     <tr>
-      <td class='line'>145</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l145s0'>		Sql thisClassObj = (Sql) object;</pre></td>
+      <td class='line'>145</td><td class='count'>212</td>
+      <td><pre class='prettyprint covered' id='l145s0'>		Sql thisClassObj = (Sql) object;</pre></td>
     </tr>
     <tr>
-      <td class='line'>146</td><td class='count'>0</td>
-      <td><pre class='prettyprint jmp'>		<span id='l146s0' title='Executions: 0' class='uncovered'>if (thisClassObj.hashCode() == this.hashCode()) return true;</span></pre></td>
+      <td class='line'>146</td><td class='count'>212</td>
+      <td><pre class='prettyprint jmp'>		<span id='l146s0' title='Executions: 212' class='covered'>if (thisClassObj.hashCode() == this.hashCode()) return true;</span></pre></td>
     </tr>
     <tr>
-      <td class='line'>147</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l147s0'>		return false;</pre></td>
+      <td class='line'>147</td><td class='count'>104</td>
+      <td><pre class='prettyprint covered' id='l147s0'>		return false;</pre></td>
     </tr>
     <tr>
       <td class='line'>148</td><td>&nbsp;</td>
@@ -386,64 +386,64 @@ import static jp.co.dk.datastoremanager.message.DataStoreManagerMessage.*;
       <td><pre class='prettyprint'>	public String toString() {</pre></td>
     </tr>
     <tr>
-      <td></td><td class='count'>0</td>
+      <td></td><td class='count'>29</td>
       <td class='paths'>
-        <span style='cursor:default; background-color:#ff0000' onclick='hidePath()'>Path coverage: 0/2</span>
-        <span class='uncovered' onclick="showPath(this,'l152s0 l153s0 l154s0 l155s0')">A: 0</span>
-        <span class='uncovered' onclick="showPath(this,'l152s0 l153s0 l157s0 l158s0 l164s0')">B: 0</span>
+        <span style='cursor:default; background-color:#00ff00' onclick='hidePath()'>Path coverage: 2/2</span>
+        <span class='covered' onclick="showPath(this,'l152s0 l153s0 l154s0 l155s0')">A: 9</span>
+        <span class='covered' onclick="showPath(this,'l152s0 l153s0 l157s0 l158s0 l164s0')">B: 20</span>
       </td>
     </tr>
     <tr>
-      <td class='line'>152</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l152s0'>		StringBuilder sqlstr = new StringBuilder("SQL=[").append(this.sql).append(']');</pre></td>
+      <td class='line'>152</td><td class='count'>29</td>
+      <td><pre class='prettyprint covered' id='l152s0'>		StringBuilder sqlstr = new StringBuilder("SQL=[").append(this.sql).append(']');</pre></td>
     </tr>
     <tr>
-      <td class='line'>153</td><td class='count'>0</td>
-      <td><pre class='prettyprint jmp'>		<span id='l153s0' title='Executions: 0' class='uncovered'>if (sqlParameter.size() == 0) {</span></pre></td>
+      <td class='line'>153</td><td class='count'>29</td>
+      <td><pre class='prettyprint jmp'>		<span id='l153s0' title='Executions: 29' class='covered'>if (sqlParameter.size() == 0) {</span></pre></td>
     </tr>
     <tr>
-      <td class='line'>154</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l154s0'>			sqlstr.append(" PARAMETER=[NOTHING]");</pre></td>
+      <td class='line'>154</td><td class='count'>9</td>
+      <td><pre class='prettyprint covered' id='l154s0'>			sqlstr.append(" PARAMETER=[NOTHING]");</pre></td>
     </tr>
     <tr>
-      <td class='line'>155</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l155s0'>			return sqlstr.toString();</pre></td>
+      <td class='line'>155</td><td class='count'>9</td>
+      <td><pre class='prettyprint covered' id='l155s0'>			return sqlstr.toString();</pre></td>
     </tr>
     <tr>
       <td class='line'>156</td><td>&nbsp;</td>
       <td><pre class='prettyprint'>		} else {</pre></td>
     </tr>
     <tr>
-      <td class='line'>157</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l157s0'>			sqlstr.append(" PARAMETER=[");</pre></td>
+      <td class='line'>157</td><td class='count'>20</td>
+      <td><pre class='prettyprint covered' id='l157s0'>			sqlstr.append(" PARAMETER=[");</pre></td>
     </tr>
     <tr>
-      <td class='line'>158</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l158s0'>			for (SqlParameter param : this.sqlParameter) {</pre></td>
+      <td class='line'>158</td><td class='count'>84</td>
+      <td><pre class='prettyprint covered' id='l158s0'>			for (SqlParameter param : this.sqlParameter) {</pre></td>
     </tr>
     <tr>
-      <td class='line'>159</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l159s0'>				sqlstr.append(param.toString()).append(", ");</pre></td>
+      <td class='line'>159</td><td class='count'>44</td>
+      <td><pre class='prettyprint covered' id='l159s0'>				sqlstr.append(param.toString()).append(", ");</pre></td>
     </tr>
     <tr>
       <td class='line'>160</td><td>&nbsp;</td>
       <td><pre class='prettyprint'>			}</pre></td>
     </tr>
     <tr>
-      <td class='line'>161</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l161s0'>			int index = sqlstr.length();</pre></td>
+      <td class='line'>161</td><td class='count'>20</td>
+      <td><pre class='prettyprint covered' id='l161s0'>			int index = sqlstr.length();</pre></td>
     </tr>
     <tr>
-      <td class='line'>162</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l162s0'>			sqlstr.delete(index-2, index);</pre></td>
+      <td class='line'>162</td><td class='count'>20</td>
+      <td><pre class='prettyprint covered' id='l162s0'>			sqlstr.delete(index-2, index);</pre></td>
     </tr>
     <tr>
-      <td class='line'>163</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l163s0'>			sqlstr.append(']');</pre></td>
+      <td class='line'>163</td><td class='count'>20</td>
+      <td><pre class='prettyprint covered' id='l163s0'>			sqlstr.append(']');</pre></td>
     </tr>
     <tr>
-      <td class='line'>164</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l164s0'>			return sqlstr.toString();</pre></td>
+      <td class='line'>164</td><td class='count'>20</td>
+      <td><pre class='prettyprint covered' id='l164s0'>			return sqlstr.toString();</pre></td>
     </tr>
     <tr>
       <td class='line'>165</td><td>&nbsp;</td>
