--- a/coverage-report/jp/co/dk/datastoremanager/database/StringSqlParameter.html
+++ b/coverage-report/jp/co/dk/datastoremanager/database/StringSqlParameter.html
@@ -33,32 +33,32 @@ import jp.co.dk.datastoremanager.exception.DataStoreManagerException;
     <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
     <tr>
       <td class='line'>12</td><td>&nbsp;</td>
-      <td><pre class='prettyprint'>	protected String <span class='instance covered' title='Reads: 2 Writes: 2'>parameter</span>;</pre></td>
+      <td><pre class='prettyprint'>	protected String <span class='instance covered' title='Reads: 922 Writes: 62'>parameter</span>;</pre></td>
     </tr>
     <tr>
-      <td></td><td class='count'>2</td>
+      <td></td><td class='count'>66</td>
       <td class='paths'>
-        <span style='cursor:default; background-color:#aa5500' onclick='hidePath()'>Path coverage: 1/3</span>
-        <span class='uncovered' onclick="showPath(this,'l14s0 l15s0 l15s2')">A: 0</span>
-        <span class='uncovered' onclick="showPath(this,'l14s0 l15s0 l15s1 l15s2')">B: 0</span>
-        <span class='covered' onclick="showPath(this,'l14s0 l15s0 l15s1 l16s0 l17s0')">C: 2</span>
+        <span style='cursor:default; background-color:#00ff00' onclick='hidePath()'>Path coverage: 3/3</span>
+        <span class='covered' onclick="showPath(this,'l14s0 l15s0 l15s2')">A: 2</span>
+        <span class='covered' onclick="showPath(this,'l14s0 l15s0 l15s1 l15s2')">B: 2</span>
+        <span class='covered' onclick="showPath(this,'l14s0 l15s0 l15s1 l16s0 l17s0')">C: 62</span>
       </td>
     </tr>
     <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
     <tr>
-      <td class='line'>14</td><td class='count'>2</td>
+      <td class='line'>14</td><td class='count'>66</td>
       <td><pre class='prettyprint covered' id='l14s0'>	StringSqlParameter(String parameter) throws DataStoreManagerException {</pre></td>
     </tr>
     <tr>
-      <td class='line'>15</td><td class='count'>2</td>
-      <td><pre class='prettyprint jmp'>		<span id='l15s0' title='Executions: 2' class='covered'>if (parameter == null</span> || <span id='l15s1' title='Executions: 2' class='covered'>parameter.equals("")) throw new DataStoreManagerException(SQL_PARAMETER_IS_NOT_SET);</span></pre></td>
+      <td class='line'>15</td><td class='count'>66</td>
+      <td><pre class='prettyprint jmp'>		<span id='l15s0' title='Executions: 66' class='covered'>if (parameter == null</span> || <span id='l15s1' title='Executions: 64' class='covered'>parameter.equals("")) throw new DataStoreManagerException(SQL_PARAMETER_IS_NOT_SET);</span></pre></td>
     </tr>
     <tr>
-      <td class='line'>16</td><td class='count'>2</td>
+      <td class='line'>16</td><td class='count'>62</td>
       <td><pre class='prettyprint covered' id='l16s0'>		this.parameter = parameter;</pre></td>
     </tr>
     <tr>
-      <td class='line'>17</td><td class='count'>2</td>
+      <td class='line'>17</td><td class='count'>62</td>
       <td><pre class='prettyprint covered' id='l17s0'>	} </pre></td>
     </tr>
     <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
@@ -75,7 +75,7 @@ import jp.co.dk.datastoremanager.exception.DataStoreManagerException;
       <td><pre class='prettyprint'>		try {</pre></td>
     </tr>
     <tr>
-      <td class='line'>22</td><td class='count'>2</td>
+      <td class='line'>22</td><td class='count'>41</td>
       <td><pre class='prettyprint covered' id='l22s0'>			statement.setString(index, this.parameter);</pre></td>
     </tr>
     <tr>
@@ -91,7 +91,7 @@ import jp.co.dk.datastoremanager.exception.DataStoreManagerException;
       <td><pre class='prettyprint'>		}</pre></td>
     </tr>
     <tr>
-      <td class='line'>26</td><td class='count'>2</td>
+      <td class='line'>26</td><td class='count'>41</td>
       <td><pre class='prettyprint covered' id='l26s0'>	}</pre></td>
     </tr>
     <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
@@ -104,34 +104,34 @@ import jp.co.dk.datastoremanager.exception.DataStoreManagerException;
       <td><pre class='prettyprint'>	public boolean equals(Object object) {</pre></td>
     </tr>
     <tr>
-      <td></td><td class='count'>0</td>
+      <td></td><td class='count'>213</td>
       <td class='paths'>
-        <span style='cursor:default; background-color:#ff0000' onclick='hidePath()'>Path coverage: 0/4</span>
-        <span class='uncovered' onclick="showPath(this,'l30s0 l30s1')">A: 0</span>
+        <span style='cursor:default; background-color:#40bf00' onclick='hidePath()'>Path coverage: 3/4</span>
+        <span class='covered' onclick="showPath(this,'l30s0 l30s1')">A: 3</span>
         <span class='uncovered' onclick="showPath(this,'l30s0 l31s0 l31s1')">B: 0</span>
-        <span class='uncovered' onclick="showPath(this,'l30s0 l31s0 l32s0 l33s0 l33s1')">C: 0</span>
-        <span class='uncovered' onclick="showPath(this,'l30s0 l31s0 l32s0 l33s0 l34s0')">D: 0</span>
+        <span class='covered' onclick="showPath(this,'l30s0 l31s0 l32s0 l33s0 l33s1')">C: 108</span>
+        <span class='covered' onclick="showPath(this,'l30s0 l31s0 l32s0 l33s0 l34s0')">D: 102</span>
       </td>
     </tr>
     <tr>
-      <td class='line'>30</td><td class='count'>0</td>
-      <td><pre class='prettyprint jmp'>		<span id='l30s0' title='Executions: 0' class='uncovered'>if (object == null)</span> <span id='l30s1' title='Executions: 0' class='uncovered'>return false;</span></pre></td>
+      <td class='line'>30</td><td class='count'>213</td>
+      <td><pre class='prettyprint jmp'>		<span id='l30s0' title='Executions: 213' class='covered'>if (object == null)</span> <span id='l30s1' title='Executions: 3' class='covered'>return false;</span></pre></td>
     </tr>
     <tr>
-      <td class='line'>31</td><td class='count'>0</td>
-      <td><pre class='prettyprint jmp'>		<span id='l31s0' title='Executions: 0' class='uncovered'>if (!(object instanceof StringSqlParameter)) return false;</span></pre></td>
+      <td class='line'>31</td><td class='count'>210</td>
+      <td><pre class='prettyprint jmp'>		<span id='l31s0' title='Executions: 210' class='covered'>if (!(object instanceof StringSqlParameter)) return false;</span></pre></td>
     </tr>
     <tr>
-      <td class='line'>32</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l32s0'>		StringSqlParameter thisClassObj = (StringSqlParameter) object;</pre></td>
+      <td class='line'>32</td><td class='count'>210</td>
+      <td><pre class='prettyprint covered' id='l32s0'>		StringSqlParameter thisClassObj = (StringSqlParameter) object;</pre></td>
     </tr>
     <tr>
-      <td class='line'>33</td><td class='count'>0</td>
-      <td><pre class='prettyprint jmp'>		<span id='l33s0' title='Executions: 0' class='uncovered'>if (thisClassObj.hashCode() == this.hashCode()) return true;</span></pre></td>
+      <td class='line'>33</td><td class='count'>210</td>
+      <td><pre class='prettyprint jmp'>		<span id='l33s0' title='Executions: 210' class='covered'>if (thisClassObj.hashCode() == this.hashCode()) return true;</span></pre></td>
     </tr>
     <tr>
-      <td class='line'>34</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l34s0'>		return false;</pre></td>
+      <td class='line'>34</td><td class='count'>102</td>
+      <td><pre class='prettyprint covered' id='l34s0'>		return false;</pre></td>
     </tr>
     <tr>
       <td class='line'>35</td><td>&nbsp;</td>
@@ -147,8 +147,8 @@ import jp.co.dk.datastoremanager.exception.DataStoreManagerException;
       <td><pre class='prettyprint'>	public int hashCode() {</pre></td>
     </tr>
     <tr>
-      <td class='line'>39</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l39s0'>		return this.parameter.hashCode() * 17;</pre></td>
+      <td class='line'>39</td><td class='count'>856</td>
+      <td><pre class='prettyprint covered' id='l39s0'>		return this.parameter.hashCode() * 17;</pre></td>
     </tr>
     <tr>
       <td class='line'>40</td><td>&nbsp;</td>
@@ -164,16 +164,16 @@ import jp.co.dk.datastoremanager.exception.DataStoreManagerException;
       <td><pre class='prettyprint'>	public String toString() {</pre></td>
     </tr>
     <tr>
-      <td class='line'>44</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l44s0'>		StringBuilder sb = new StringBuilder();</pre></td>
+      <td class='line'>44</td><td class='count'>25</td>
+      <td><pre class='prettyprint covered' id='l44s0'>		StringBuilder sb = new StringBuilder();</pre></td>
     </tr>
     <tr>
-      <td class='line'>45</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l45s0'>		sb.append(this.parameter).append("(string)");</pre></td>
+      <td class='line'>45</td><td class='count'>25</td>
+      <td><pre class='prettyprint covered' id='l45s0'>		sb.append(this.parameter).append("(string)");</pre></td>
     </tr>
     <tr>
-      <td class='line'>46</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l46s0'>		return sb.toString();</pre></td>
+      <td class='line'>46</td><td class='count'>25</td>
+      <td><pre class='prettyprint covered' id='l46s0'>		return sb.toString();</pre></td>
     </tr>
     <tr>
       <td class='line'>47</td><td>&nbsp;</td>
